# JunQiReplay

./: .gitignore  CMakeLists.txt  JunQiReplay.pro  JunQiReplay.qrc  JunQiReplay_zh_CN.ts  cmake2vs.ps1  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindowviewmodel.cpp  mainwindowviewmodel.h  model.cpp  model.h  proxy.cpp  replay.cpp  replay.h  replaytablemodel.cpp  replaytablemodel.h
.github/workflows/: Build.yml
qml/: AboutDialog.qml  AboutDialogIcon.qml
res/: JunQiReplay.qrc  JunQiReplay.rc.in  JunQiReplay_zh_CN.qm  JunQiReplay_zh_CN.ts  MainWindow.qml
scripts/: cmake2vs.ps1  win_build.ps1  win_env.ps1
src/: junqi.cpp  junqi.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  model.cpp  model.h  proxy.cpp  proxy.h  replay.cpp  replay.h
test/: junqi2020_12_20_21_0.jgs  junqi2020_12_2_21_46.jgs  junqi2020_12_31_14_55.jgs  junqi2020_2_23_22_2.jgs  junqi2020_2_25_18_11.jgs  junqi2020_2_25_21_4经典复盘_最后三步998.jgs  junqi2021_10_19_17_20.jgs  junqi2021_10_26_22_32.jgs  junqi2021_10_27_22_11空城计.jgs  junqi2021_10_30_0_19.jgs  junqi2021_11_19_22_0.jgs  junqi2021_11_1_23_0最后决胜步.jgs  junqi2021_12_18_22_6.jgs  junqi2021_12_4_14_2.jgs  junqi2021_1_20_22_50.jgs  junqi2021_1_6_15_30.jgs  junqi2021_9_21_21_31.jgs  junqi2021_9_24_20_21妙手司令骗军长.jgs  junqi2021_9_24_20_42瞬间翻盘125步.jgs  junqi2022_1_7_21_54.jgs  junqi2022_1_8_15_36.jgs
